// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rollup plugins default build plugins with sideEffects: false 1`] = `
Array [
  "@rollup/plugin-resolve",
  "@rollup/plugin-commonjs",
  "@rollup/plugin-json",
  Object {
    "calledWith": Object {
      "include": Array [
        "**/*.ts+(|x)",
        "**/*.js+(|x)",
      ],
      "tsconfig": undefined,
      "tsconfigDefaults": Object {
        "compilerOptions": Object {
          "declaration": true,
          "rootDir": "./src",
          "types": Array [],
        },
        "include": Array [
          "src",
        ],
      },
      "tsconfigOverride": Object {
        "compilerOptions": Object {
          "module": "esnext",
          "sourceMap": true,
        },
        "exclude": Array [
          "**/__tests__",
          "**/__mocks__",
          "**/__snapshots__",
          "**/*.test.*",
          "**/*.spec.*",
          "**/*.mock.*",
        ],
        "include": Array [
          "./node_modules/rollpkg/configs/types",
        ],
      },
    },
    "name": "rollup-plugin-typescript2",
  },
  "rollup-plugin-sourcemaps",
  Object {
    "calledWith": Object {
      "__DEV__": "process.env.NODE_ENV !== 'production'",
    },
    "name": "@rollup/plugin-replace",
  },
]
`;

exports[`rollup plugins default build plugins with sideEffects: true 1`] = `
Array [
  "@rollup/plugin-resolve",
  "@rollup/plugin-commonjs",
  "@rollup/plugin-json",
  Object {
    "calledWith": Object {
      "include": Array [
        "**/*.ts+(|x)",
        "**/*.js+(|x)",
      ],
      "tsconfig": undefined,
      "tsconfigDefaults": Object {
        "compilerOptions": Object {
          "declaration": true,
          "rootDir": "./src",
          "types": Array [],
        },
        "include": Array [
          "src",
        ],
      },
      "tsconfigOverride": Object {
        "compilerOptions": Object {
          "module": "esnext",
          "sourceMap": true,
        },
        "exclude": Array [
          "**/__tests__",
          "**/__mocks__",
          "**/__snapshots__",
          "**/*.test.*",
          "**/*.spec.*",
          "**/*.mock.*",
        ],
        "include": Array [
          "./node_modules/rollpkg/configs/types",
        ],
      },
    },
    "name": "rollup-plugin-typescript2",
  },
  "rollup-plugin-sourcemaps",
  Object {
    "calledWith": Object {
      "__DEV__": "process.env.NODE_ENV !== 'production'",
    },
    "name": "@rollup/plugin-replace",
  },
]
`;

exports[`rollup plugins dev build plugins with sideEffects: false 1`] = `
Array [
  "@rollup/plugin-resolve",
  "@rollup/plugin-commonjs",
  "@rollup/plugin-json",
  Object {
    "calledWith": Object {
      "include": Array [
        "**/*.ts+(|x)",
        "**/*.js+(|x)",
      ],
      "tsconfig": undefined,
      "tsconfigDefaults": Object {
        "compilerOptions": Object {
          "declaration": true,
          "rootDir": "./src",
          "types": Array [],
        },
        "include": Array [
          "src",
        ],
      },
      "tsconfigOverride": Object {
        "compilerOptions": Object {
          "module": "esnext",
          "sourceMap": true,
        },
        "exclude": Array [
          "**/__tests__",
          "**/__mocks__",
          "**/__snapshots__",
          "**/*.test.*",
          "**/*.spec.*",
          "**/*.mock.*",
        ],
        "include": Array [
          "./node_modules/rollpkg/configs/types",
        ],
      },
    },
    "name": "rollup-plugin-typescript2",
  },
  "rollup-plugin-sourcemaps",
  Object {
    "calledWith": Object {
      "__DEV__": "process.env.NODE_ENV !== 'production'",
    },
    "name": "@rollup/plugin-replace",
  },
  Object {
    "calledWith": Object {
      "process.env.NODE_ENV": "\\"development\\"",
    },
    "name": "@rollup/plugin-replace",
  },
]
`;

exports[`rollup plugins dev build plugins with sideEffects: true 1`] = `
Array [
  "@rollup/plugin-resolve",
  "@rollup/plugin-commonjs",
  "@rollup/plugin-json",
  Object {
    "calledWith": Object {
      "include": Array [
        "**/*.ts+(|x)",
        "**/*.js+(|x)",
      ],
      "tsconfig": undefined,
      "tsconfigDefaults": Object {
        "compilerOptions": Object {
          "declaration": true,
          "rootDir": "./src",
          "types": Array [],
        },
        "include": Array [
          "src",
        ],
      },
      "tsconfigOverride": Object {
        "compilerOptions": Object {
          "module": "esnext",
          "sourceMap": true,
        },
        "exclude": Array [
          "**/__tests__",
          "**/__mocks__",
          "**/__snapshots__",
          "**/*.test.*",
          "**/*.spec.*",
          "**/*.mock.*",
        ],
        "include": Array [
          "./node_modules/rollpkg/configs/types",
        ],
      },
    },
    "name": "rollup-plugin-typescript2",
  },
  "rollup-plugin-sourcemaps",
  Object {
    "calledWith": Object {
      "__DEV__": "process.env.NODE_ENV !== 'production'",
    },
    "name": "@rollup/plugin-replace",
  },
  Object {
    "calledWith": Object {
      "process.env.NODE_ENV": "\\"development\\"",
    },
    "name": "@rollup/plugin-replace",
  },
]
`;

exports[`rollup plugins output default plugins 1`] = `Array []`;

exports[`rollup plugins output prod plugins 1`] = `
Array [
  Object {
    "calledWith": Object {
      "format": Object {
        "comments": false,
      },
    },
    "name": "rollup-plugin-terser",
  },
]
`;

exports[`rollup plugins prod build plugins with sideEffects: false 1`] = `
Array [
  "@rollup/plugin-resolve",
  "@rollup/plugin-commonjs",
  "@rollup/plugin-json",
  Object {
    "calledWith": Object {
      "include": Array [
        "**/*.ts+(|x)",
        "**/*.js+(|x)",
      ],
      "tsconfig": undefined,
      "tsconfigDefaults": Object {
        "compilerOptions": Object {
          "declaration": true,
          "rootDir": "./src",
          "types": Array [],
        },
        "include": Array [
          "src",
        ],
      },
      "tsconfigOverride": Object {
        "compilerOptions": Object {
          "module": "esnext",
          "sourceMap": true,
        },
        "exclude": Array [
          "**/__tests__",
          "**/__mocks__",
          "**/__snapshots__",
          "**/*.test.*",
          "**/*.spec.*",
          "**/*.mock.*",
        ],
        "include": Array [
          "./node_modules/rollpkg/configs/types",
        ],
      },
    },
    "name": "rollup-plugin-typescript2",
  },
  "rollup-plugin-sourcemaps",
  Object {
    "calledWith": Object {
      "__DEV__": "process.env.NODE_ENV !== 'production'",
    },
    "name": "@rollup/plugin-replace",
  },
  Object {
    "calledWith": Object {
      "process.env.NODE_ENV": "\\"production\\"",
    },
    "name": "@rollup/plugin-replace",
  },
]
`;

exports[`rollup plugins prod build plugins with sideEffects: true 1`] = `
Array [
  "@rollup/plugin-resolve",
  "@rollup/plugin-commonjs",
  "@rollup/plugin-json",
  Object {
    "calledWith": Object {
      "include": Array [
        "**/*.ts+(|x)",
        "**/*.js+(|x)",
      ],
      "tsconfig": undefined,
      "tsconfigDefaults": Object {
        "compilerOptions": Object {
          "declaration": true,
          "rootDir": "./src",
          "types": Array [],
        },
        "include": Array [
          "src",
        ],
      },
      "tsconfigOverride": Object {
        "compilerOptions": Object {
          "module": "esnext",
          "sourceMap": true,
        },
        "exclude": Array [
          "**/__tests__",
          "**/__mocks__",
          "**/__snapshots__",
          "**/*.test.*",
          "**/*.spec.*",
          "**/*.mock.*",
        ],
        "include": Array [
          "./node_modules/rollpkg/configs/types",
        ],
      },
    },
    "name": "rollup-plugin-typescript2",
  },
  "rollup-plugin-sourcemaps",
  Object {
    "calledWith": Object {
      "__DEV__": "process.env.NODE_ENV !== 'production'",
    },
    "name": "@rollup/plugin-replace",
  },
  Object {
    "calledWith": Object {
      "process.env.NODE_ENV": "\\"production\\"",
    },
    "name": "@rollup/plugin-replace",
  },
]
`;
